STYLE: changed polar angle of orbit controls to avoid eyeglass clipping

--- a/public/css/pages/index.css
+++ b/public/css/pages/index.css
@@ -71,7 +71,7 @@
 
     #hero-3d-render {
         height: auto;
-        aspect-ratio: 5/4;
+        aspect-ratio: 10/9;
     }
 }
 
